--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,13 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.10+1
 
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
+  firebase_storage: ^12.4.0
+  google_sign_in: ^6.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
